バッテリ関係のフィールド追加
